Fix actor selector overlapping wizard controls
When selecting actors the dropdown was covering the next buttons

Fixes #535

--- a/app/styles/query-builder/actor-select.scss
+++ b/app/styles/query-builder/actor-select.scss
@@ -44,7 +44,7 @@
     // select input options
     .actor-select-options {
       display: none; // do not show until dropdown is expanded
-      position: absolute;
+      /* position: absolute; */
       top: 100%;
       left: 0;
       width: 100%;
